<resources>
    <string name="app_name">My Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_start_using_app">Login to start using app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">Ok</string>
    <string name="signin_failed">Sign In Failed!</string>
    <string name="empty_massage">Please fill the empty fields.</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="signup_failed">Sign Up Failed!</string>
    <string name="categories">Categories</string>
    <string name="remove_massage">Category removed successfully!</string>
    <string name="note_remove_massage">Note removed successfully!</string>
    <string name="undo">UNDO</string>
    <string name="new_categories">New Categories</string>
    <string name="create_category">Create Category..</string>
    <string name="category_name">Category Name</string>
    <string name="short_description">Short Description</string>
    <string name="save">Save</string>
    <string name="creation_failed">Creation Failed!</string>
    <string name="creation_success">New Category Created Successfully!</string>
    <string name="note_creation_success">New Note Saved Successfully!</string>
    <string name="crate_new_category_to_start">Crate New Category To Start..</string>
    <string name="crate_new_note_to_start">Crate New Note To Start..</string>
    <string name="new_note">New Note</string>
    <string name="create_note">Create note..</string>
    <string name="note_title">Note Title</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="selected_language">Selected language :</string>
    <string name="profile">Profile</string>
    <string name="update_your_data">Update your data..</string>
    <string name="about_app">About App</string>
    <string name="what_is_notes_app">What is notes app?</string>
    <string name="logout">Logout</string>
    <string name="waiting_your_return">Waiting your return..</string>
    <string name="waiting_notes">Waiting Notes</string>
    <string name="done_notes">Done Notes</string>
    <string name="editing_failed">Editing Failed!</string>
    <string name="wrong_login">Email or password is incorrect!!</string>
    <string name="success_signup">Welcome, your account created successfully!</string>
    <string name="update_success">Your data updated successfully!</string>
    <string name="done_edit_language">Editing language done successfully!</string>
    <string name="for_organized_life">For Organized Life</string>
    <string name="my_notes">My Notes</string>
    <string name="get_data">Getting your data...</string>
    <string name="wrong_massege">Something went wrong!! Try again later.</string>
    <string name="create_categorys">Creating category...</string>
    <string name="edit_category">Editing category...</string>
    <string name="add_note">Adding note...</string>
    <string name="login_massege">Signing you in...</string>
    <string name="fname_wrong">First name should have at least 3 letters, and first one should be uppercase letter.</string>
    <string name="lname_wrong">Last name should have at least 3 letters, and first one should be uppercase letter.</string>
    <string name="email_wrong">Please enter valid email.</string>
    <string name="update_data">Updating your data...</string>
    <string name="udate_done">Your data updated successfully!!</string>
    <string name="password_wrong">Password should have at least 8 characters, and should have lowercase letter, digit, and special character.</string>
    <string name="make_account">Making your account...</string>
</resources>
